Fixed: input too narrow on cart page.

--- a/IdentityApplication/scss/include/store_and_cart.scss
+++ b/IdentityApplication/scss/include/store_and_cart.scss
@@ -8,6 +8,8 @@ Content of store_and_cart.scss
 
 input.qtyToOrder-input {
   height: 34px;
+  /*border: 2px solid green;
+  min-width: 50px;*/
 }
 
 button.qty-btn {
